
syntax = "proto3";

import "google/protobuf/timestamp.proto";
package storage;
option go_package = "pb";

message JobApplication {
	string UserUUID = 1;
	string JobUUID = 2;
	google.protobuf.Timestamp CreatedAt = 3;
	google.protobuf.Timestamp UpdatedAt = 4;
	google.protobuf.Timestamp DeletedAt = 5;
}