syntax = "proto3";

package storage;
import "google/protobuf/timestamp.proto";
import "User_schema.proto";

option go_package = "pb";

message User_FindByRollAndNameRequest {
    User_FindByRollAndNameQuery query = 1;
}

message User_FindByRollAndNameResponse {
    repeated User users = 1;
}

message User_FindByRollAndNameQuery {
    int64 Roll = 1;
    google.protobuf.Timestamp DeletedAt = 2;
    google.protobuf.Timestamp UpdatedAt = 3;
    // config has contains and thus, repeated array is created
    repeated string Name = 4;
}